--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 .emailwith{width: 65% !important;}
 .crd{margin-left: 10px !important; width: auto !important;}
 .mrgleft{
-	margin-left: 6px;
-	font-size: 15px;
+	margin-left: 3px;
+	font-size: 17px;
 	color: #144876;
 }
 .adm{border-bottom: 1px dashed #5c5c5c}
@@ -76,3 +76,4 @@ strong{color: #144876;}
     text-decoration: none !important;
     outline: none !important;
 }
+.img100{width: 90% !important;}
